--- a/css/common.css
+++ b/css/common.css
@@ -28,45 +28,19 @@ html{font-size:100px;
 }
 .loading .icon{
     background-color: rgba(245, 245, 245, 0.4);
-    border-radius: 0.1rem;
-    width: 1.24rem;
-    height: 1.24rem;
-    background-size: 100%;
-    background-repeat: no-repeat;
+    border-radius: 0.4rem;
+    width: 220px;
+    height: 220px;
+   transform: scale(0.4);
+  
     background-image: url(../images/loading.png);
-    background-position-y: -1.22rem;
-    animation:run 0.3s steps(1, start) infinite;
-}
-@keyframes run{
-    9%{
-        background-position-y: -1.22rem 
-    }
-    18%{
-        background-position-y: -2.44rem 
-    }
-    27%{
-        background-position-y: -3.66rem 
-    }
-    36%{
-        background-position-y: -4.88rem 
-    }
-    45%{
-        background-position-y: -6.10rem 
-    }
-    54%{
-        background-position-y: -7.32rem 
-    }
-    63%{
-        background-position-y: -8.54rem 
-    }
-    72%{
-        background-position-y: -9.76rem 
-    }
-    81%{
-        background-position-y: -10.98rem 
-    }
-    90%{
-       /* background-position-y: -11.98rem  */
-    }
 
+    animation:run 1s steps(11) infinite;
+
+}
+
+
+@keyframes run{
+    from { background-position:15px    0; }
+	to { background-position:15px  -2013px ; }
 }
