--- a/css/result.css
+++ b/css/result.css
@@ -1,5 +1,6 @@
 body{
     padding-bottom: 1rem;
+ 
 }
 .success{
     display: none
@@ -11,7 +12,7 @@ body{
     display: flex;
     align-items: center;
     height: 1.3rem;
-    font-size: 0.24rem;
+ 
     color: #468ee5;
 }
 
@@ -22,10 +23,14 @@ body{
     margin-left: 0.4rem;
 }
 
+.product-box div{
+    font-size: 0.28rem;
+}
+
 .ewm-box {
     width: 100%;
     margin-top: 0.3rem;
-    height: 3.60rem;
+    min-height: 3.60rem;
     position: relative;
     box-shadow: 0rpx 0.04rem 0.04rem 0rpx #ccc;
 }
@@ -34,7 +39,7 @@ body{
     width: 50%;
     float: left;
     background: #d70404;
-    height: 3.60rem;
+    min-height: 3.60rem;
 }
 
 .ewm-box .item .title {
@@ -48,12 +53,19 @@ body{
     margin: 0.40rem auto 0.2rem;
 }
 
-.ewm-box .item img {
+.ewm-box .item img{
+    width: 2rem;
+    margin-bottom: 0.2rem;
+}
+.ewm-box .item .pic_bg{
     width: 2rem;
     height: 2rem;
     margin: auto;
     display: block;
+    background: url(../images/lazy.png) no-repeat center center;
+    background-size: 100%;
 }
+
 
 .ewm-box .item:nth-child(2) {
     background: #30328e;
@@ -97,6 +109,7 @@ body{
 
 .cyjg-box .title {
     margin-left: 1rem;
+    font-size: 0.28rem;
 }
 
 .cyjg-box .btn-icon {
@@ -105,10 +118,12 @@ body{
     border: 1px solid #30328e;
     padding: 0.04rem;
     border-radius: 50%;
-    margin-left: 1rem;
+    margin-left: 0.9rem;
     position: relative;
 }
-
+.cyjg-box .btn-icon.false{
+    border: 1px solid red;
+}
 .cyjg-box .btn-icon div {
     width: 100%;
     height: 100%;
@@ -118,10 +133,13 @@ body{
     color: #fff;
     border-radius: 50%;
 }
+.cyjg-box .btn-icon.false div{
+    background: red;
+}
 
 .cyjg-box .big {
     margin-left: 0.50rem;
-    font-size: 0.40rem;
+    font-size: 0.50rem;
     font-weight: bold;
     color: #30328e;
 }
@@ -129,6 +147,7 @@ body{
 .cyjg-box .gray {
     color: #909090;
     margin-left: 0.20rem;
+    font-size: 0.28rem;
 }
 
 .product-info {
@@ -140,14 +159,16 @@ body{
     border-top: 1px solid #ccc;
     line-height: 0.60rem;
     padding: 0.20rem 0;
+    text-align: left;
 }
 
 .product-info div {
     margin-left: 0.40rem;
+    font-size: 0.28rem
 }
 
 .history-num {
-    font-size: 0.24rem;
+    font-size: 0.28rem;
     color: #4a4a4a;
     background: #efefef;
     border-bottom: 1px solid #ccc;
@@ -182,10 +203,13 @@ body{
 }
 .fail .ewm{
     width: 2rem;
-    height: 2rem;
+    min-height: 2rem;
     margin: auto;
     padding: 0.1rem;
     border:1px solid #4A90E2 
+}
+.fail .ewm img{
+    display: block;
 }
 .fail .ewm img{width: 100%;}
 .fail .tips{
@@ -215,11 +239,13 @@ body{
 
 .foot-bar img {
     width: 1.74rem;
-    height: 0.56rem;
+
     margin-top: 0.05rem;
 }
 .foot-bar a{
     color: #fff;
+    position: relative;
+    top: 0.05rem;
 }
 .foot-bar div:nth-child(1)::after {
     content: '';
